[tool.poetry]
name = "rpg-combat-kata"
version = "0.1.0"
description = ""
authors = ["Juan Bigorra <juanchoibf@gmail.com>"]
readme = "README.md"
packages = [{include = "rpg_combat_kata"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
